src/objects/GDMFSL_Safe_and_Sound__c/GDMFSL_Safe_and_Sound__c.object-meta.xml
<CustomObject>
    <label>Safe and Sound</label>
    <nameField>
        <displayFormat>SAS-{0000}</displayFormat>
        <label>Safe and Sound Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Safe and Sound</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>