src/objects/GDMFSL_Safe_and_Sound__c/fields/GDMFSL_End__c.field-meta.xml
<CustomField>
    <fullName>GDMFSL_End__c</fullName>
    <label>End</label>
    <type>DateTime</type>
</CustomField>