src/objects/GDMFSL_Safe_and_Sound__c/fields/GDMFSL_Service_Resource__c.field-meta.xml
<CustomField>
    <fullName>GDMFSL_Service_Resource__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Service Resource</label>
    <referenceTo>ServiceResource</referenceTo>
    <relationshipLabel>Safe and Sound</relationshipLabel>
    <relationshipName>Safe_and_Sound</relationshipName>
    <type>Lookup</type>
</CustomField>