src/objects/GDMFSL_Safe_and_Sound__c/fields/GDMFSL_Start__c.field-meta.xml
<CustomField>
    <fullName>GDMFSL_Start__c</fullName>
    <label>Start</label>
    <type>DateTime</type>
</CustomField>