src/objects/GDMFSL_Safe_and_Sound__c/fields/GDMFSL_Start_of_Shift__c.field-meta.xml
<CustomField>
    <fullName>GDMFSL_Start_of_Shift__c</fullName>
    <description>Start of Shift from Service Resource Record, per DTXFSL-6899</description>
    <formula>GDMFSL_Service_Resource__r.GDMFSL_Start_of_Shift__c</formula>
    <label>Start of Shift</label>
    <type>DateTime</type>
</CustomField>