src/objects/GDMFSL_Safe_and_Sound__c/listViews/GDMFSL_Activated_Only.listView-meta.xml
<ListView>
    <fullName>GDMFSL_Activated_Only</fullName>
    <columns>NAME</columns>
    <columns>GDMFSL_Service_Resource__c</columns>
    <columns>GDMFSL_Start__c</columns>
    <columns>GDMFSL_Status__c</columns>
    <columns>GDMFSL_Activated_Over_60_min_Ago__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>GDMFSL_Status__c</field>
        <operation>equals</operation>
        <value>Activated</value>
    </filters>
    <label>Activated Only</label>
    <sharedTo>
        <allInternalUsers/>
    </sharedTo>
</ListView>